# user-center-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  config-dev.yaml  config-test.yaml  makefile
.ci/.kubernetes/: deployment-template.yaml  service-template.yaml
image/: Dockerfile.env  Dockerfile.in
migrations/2020-12-12-093535_user/: up.sql
src/: config.rs  controller.rs  dao.rs  error.rs  main.rs  model.rs  schema.rs  service.rs  settings.rs
src/dao/: mgo.rs  mod.rs  mysql.rs
src/handler/: chain.rs  guard.rs  mod.rs  user.rs
src/model/: chain.rs  mod.rs  request.rs  user.rs
src/service/: chain_service.rs  mod.rs  user_service.rs
