[package]
name = "user-center-rs"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
lazy_static = "1.4.0"
bson = "1.1.0"
serde = "1.0.116"


[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]
