[package]
name = "app"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
chrono = "0.4.17"
actix-web="3"
lazy_static = "1.4.0"
bson = "1.1.0"
serde = "1.0.116"
thiserror = "1.0.20"
anyhow = "1.0.32"


[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]
