[package]
name = "app"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.8.1"
chrono = "0.4.19"
config = "0.10.1"
actix-web="3.3.2"
actix-session = "0.4.0"
lazy_static = "1.4.0"
bson = "1.1.0"
serde = "1.0.117"
thiserror = "1.0.21"
anyhow = "1.0.33"
futures = { version = "0.3.8", default-features = false, features = ["async-await"]}
async-trait = "0.1.42"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]
